<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_url_default"
        android:key="pref_url"
        android:title="@string/pref_url"
        android:summary="@string/pref_url_summ" />

    <de.heikomaass.refreshfever.app.ui.settings.TimePreference
        android:defaultValue="@string/pref_time_default"
        android:key="pref_time"
        android:title="@string/pref_time"
        android:summary="@string/pref_time_summ"/>
    <de.heikomaass.refreshfever.app.ui.settings.PeriodPreference
        android:defaultValue="3600000"
        android:key="pref_period"
        android:title="@string/pref_period_summ"
        android:summary="The Period between each refresh"/>

</PreferenceScreen>